--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,16 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+# Spring Boot
+target/
+*.log
+
+# Java build output
+*.class
+*.jar
+*.war
+*.ear
+
 ### STS ###
 .apt_generated
 .classpath
