--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=student-service
-
 server.port=1000
 server.servlet.context-path=/student-service
-
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -12,3 +10,14 @@ spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# Swagger
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+springdoc.swagger-ui.title=Student Service API
+springdoc.swagger-ui.description=API documentation for managing students.
+springdoc.swagger-ui.version=1.0.0
+
+
+
