--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,13 @@
-name: CI - Build and Test Spring Boot App
+name: Test GitHub Actions
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-
-    - name: Grant Execute Permission to Gradle Wrapper
-      run: chmod +x ./gradlew
-
-    - name: Build and Run Tests
-      run: ./gradlew clean build
-
-    - name: Archive Build Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: spring-boot-jar
-        path: build/libs/*.jar
+    - name: Hello World
+      run: echo "GitHub Actions is working!"
