--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,27 @@
-name: Test GitHub Actions
+name: CI - Build and Test Spring Boot App
 
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Hello World
-      run: echo "GitHub Actions is working!"
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+
+    - name: Grant Execute Permission to Gradle Wrapper
+      run: chmod +x ./gradlew
+
+    - name: Build and Run Tests
+      run: ./gradlew clean build
