--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI - Build and Test Spring Boot App
+name: CI - Build, Test, and Deploy to Docker
 
 on:
   push:
@@ -25,3 +25,12 @@ jobs:
 
     - name: Build and Run Tests
       run: ./gradlew clean build
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Build Docker Image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/student-service:latest .
+
+    - name: Push Docker Image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/student-service:latest
