--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,17 @@ jobs:
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/student-service:latest .
+    # Define version tag (you can change v1.0 to pull from git tag or version file)
+    - name: Set Docker Tag
+      id: vars
+      run: echo "TAG=v1.0" >> $GITHUB_ENV
 
-    - name: Push Docker Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/student-service:latest
+    - name: Build Docker Images (latest + version)
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/student-service:latest \
+                     -t ${{ secrets.DOCKER_USERNAME }}/student-service:${{ env.TAG }} .
+
+    - name: Push Docker Images
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/student-service:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/student-service:${{ env.TAG }}
